fix: minor fixes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-	<title>Document</title>
+	<link rel="icon" href="img/Cat-avatar-rounded-big.ico">
+	<title>Mahiko CV</title>
 </head>
 
 <body>
-	<!-- ------navbar------- -->
+	<!--navbar-->
 	<nav class="nav">
 		<ul class="nav__list">
 			<li><a href="#">SKILLS</a></li>
@@ -20,13 +22,13 @@
 			<li><a href="#">ENGLISH</a></li>
 		</ul>
 	</nav>
-	<!-- -------end of navbar---------- -->
+	<!--end of navbar-->
 	<div class="container">
-		<!-- -----------left bar----------- -->
+		<!--left bar-->
 		<header class="header">
 			<div class="header__top">
 				<div class="user__avatar__container">
-					<img src="./img/Cat-avatar-rounded-big.png" alt="avatar" class="user__avatar">
+					<img class="user__avatar" src="./img/Cat-avatar-rounded-big.png" alt="avatar">
 				</div>
 				<div class="author__container">
 					<div class="author__name">
@@ -60,55 +62,55 @@
 				</ul>
 			</div>
 		</header>
-		<!-- ------------end of left bar---------------- -->
-		<!-- -----------------main content--------------- -->
-	<div class="content__container">
-		<main>
-			<div class="about__author">
-				<h2>About me</h2>
-				<p>I have no web development experience - just started.
-					I want to learn front-end web development to develop some pet projects in my free time, participate in open source development and maybe some freelancing. For better or worse, I have no plans to change my profession yet.</p>
-				<p>I have no web development experience - just started.
-					I want to learn front-end web development to develop some pet projects inmy free time, participate in open source development and maybe somefreelancing. For better or worse, I have no plans to change my profession yet.</p>
-			</div>
-			<div class="skills">
-				<h3>Skills</h3>
-				<ul class="skills__container">
-					<li class="skills__container_box">
-						<img src="img/icons_html.png" alt="html icon">
-						<div class="skills__container-text">
-							<h4>HTML</h4>
-							<p>Im an active learner of html!</p>
-						</div>
-					</li>
-					<li class="skills__container_box">
-						<img src="img/icons_css.png" alt="css icon">
-						<div class="skills__container-text">
-							<h4>CSS</h4>
-							<p>Im an active learner of html!</p>
-						</div>
-					</li>
-					<li class="skills__container_box">
-						<img src="img/icons_js.png" alt="js icon">
-						<div class="skills__container-text">
-							<h4>JavaScript</h4>
-							<p>Im an active learner of html!</p>
-						</div>
-					</li>
-					<li class="skills__container_box">
-						<img src="img/icons_react.png" alt="html icon">
-						<div class="skills__container-text">
-							<h4>React</h4>
-							<p>Im an active learner of html!</p>
-						</div>
-					</li>
-				</ul>
+		<!--end of left bar-->
+		<!--main content-->
+		<div class="content__container">
+			<main>
+				<div class="about__author">
+					<h2>About me</h2>
+					<p>I have no web development experience - just started.
+						I want to learn front-end web development to develop some pet projects in my free time, participate in open source development and maybe some freelancing. For better or worse, I have no plans to change my profession yet.</p>
+					<p>I have no web development experience - just started.
+						I want to learn front-end web development to develop some pet projects inmy free time, participate in open source development and maybe somefreelancing. For better or worse, I have no plans to change my profession yet.</p>
+				</div>
+				<div class="skills">
+					<h3>Skills</h3>
+					<ul class="skills__container">
+						<li class="skills__container_box">
+							<img src="img/icons_html.png" alt="html icon">
+							<div class="skills__container-text">
+								<h4>HTML</h4>
+								<p>Im an active learner of html!</p>
+							</div>
+						</li>
+						<li class="skills__container_box">
+							<img src="img/icons_css.png" alt="css icon">
+							<div class="skills__container-text">
+								<h4>CSS</h4>
+								<p>Im an active learner of html!</p>
+							</div>
+						</li>
+						<li class="skills__container_box">
+							<img src="img/icons_js.png" alt="js icon">
+							<div class="skills__container-text">
+								<h4>JavaScript</h4>
+								<p>Im an active learner of html!</p>
+							</div>
+						</li>
+						<li class="skills__container_box">
+							<img src="img/icons_react.png" alt="html icon">
+							<div class="skills__container-text">
+								<h4>React</h4>
+								<p>Im an active learner of html!</p>
+							</div>
+						</li>
+					</ul>
 
-			</div>
-			<div class="code-example">
-				<h3>Code example</h3>
-				<pre>
+				</div>
+				<div class="code-example">
+					<h3>Code example</h3>
 					<div class="code__container">
+						<pre>
 						<code>
 class Polygon {
 	constructor(height, width) {
@@ -132,67 +134,69 @@ class Square extends Polygon {
 
 var square = new Square(2);
 						</code>
+					</pre>
 					</div>
-				</pre>
-			</div>
-			<div class="experience">
-				<h3>Experience</h3>
+				</div>
+				<div class="experience">
+					<h3>Experience</h3>
 					<div class="experience__container">
 						<p>Here's my very first CV project!</p>
 						<a href="https://mahiko.github.io/rsschool-cv/cv" target="_blank"><img src="img/my_project.png" alt="my project"></a>
 					</div>
-			</div>
-			<div class="education">
-				<h3>Education</h3>
-				<div class="education__container">
-					<div class="education__school">
-						<h5>May - September 2024</h5>
-						<h5>Rolling Scopes School</h5>
+				</div>
+				<div class="education">
+					<h3>Education</h3>
+					<div class="education__container">
+						<div class="education__school">
+							<h5>May - September 2024</h5>
+							<h5>Rolling Scopes School</h5>
+						</div>
+						<div class="education__text">
+							<h6>React developer</h6>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolorem voluptate blanditiis eligendi perferendis vitae vel nobis doloremque esse doloribus.</p>
+						</div>
 					</div>
-					<div class="education__text">
-						<h6>React developer</h6>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolorem voluptate blanditiis eligendi perferendis vitae vel nobis doloremque esse doloribus.</p>
+					<div class="education__container">
+						<div class="education__school">
+							<h5>November 2023 - May 2024</h5>
+							<h5>Rolling Scopes School</h5>
+						</div>
+						<div class="education__text">
+							<h6>Front-end developer</h6>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolorem voluptate blanditiis eligendi perferendis vitae vel nobis doloremque esse doloribus.</p>
+						</div>
+					</div>
+					<div class="education__container no-border">
+						<div class="education__school">
+							<h5>June - November 2023</h5>
+							<h5>Rolling Scopes School</h5>
+						</div>
+						<div class="education__text">
+							<h6>Beginner front-end developer</h6>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolorem voluptate blanditiis eligendi perferendis vitae vel nobis doloremque esse doloribus.</p>
+						</div>
 					</div>
 				</div>
-				<div class="education__container">
-					<div class="education__school">
-						<h5>November 2023 - May 2024</h5>
-						<h5>Rolling Scopes School</h5>
-					</div>
-					<div class="education__text">
-						<h6>Front-end developer</h6>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolorem voluptate blanditiis eligendi perferendis vitae vel nobis doloremque esse doloribus.</p>
+				<div class="english">
+					<h3>English</h3>
+					<div class="english__container">
+						<p>B2 Upper-intermediate</p>
+						<img src="img/Englsih_level.png" alt="english level">
+						<a href="https://www.efset.org/quick-check/">www.efset.org</a>
 					</div>
 				</div>
-				<div class="education__container no-border">
-					<div class="education__school">
-						<h5>June - November 2023</h5>
-						<h5>Rolling Scopes School</h5>
-					</div>
-					<div class="education__text">
-						<h6>Beginner front-end developer</h6>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolorem voluptate blanditiis eligendi perferendis vitae vel nobis doloremque esse doloribus.</p>
-					</div>
-				</div>
-			</div>
-			<div class="english">
-				<h3>English</h3>
-				<div class="english__container">
-					<p>B2 Upper-intermediate</p>
-					<img src="img/Englsih level.png" alt="english level">
-					<a href="https://www.efset.org/quick-check/">www.efset.org</a>
-				</div>
-			</div>
-		</main>
-<!-- -----------------footer------------------ -->
-		<footer class="footer">
-			<ul class="footer_container">
-				<li class="github"><a href="https://github.com/Mahiko" target="_blank"><img src="img/github.png" alt="author github"></a></li>
-				<li><h5><span>&copy;</span>2023 Mahiko LLC.</h5></li>
-				<li class="rsschool"><a href="https://rs.school/js/" target="_blank"><img src="img/rs_school_js.svg" alt="rs school"></a></li>
-			</ul>
-		</footer>
-	</div>
+			</main>
+			<!--footer-->
+			<footer class="footer">
+				<ul class="footer_container">
+					<li class="github"><a href="https://github.com/Mahiko" target="_blank"><img src="img/github.png" alt="author github"></a></li>
+					<li>
+						<h5><span>&copy;</span>2023 Mahiko LLC.</h5>
+					</li>
+					<li class="rsschool"><a href="https://rs.school/js/" target="_blank"><img src="img/rs_school_js.svg" alt="rs school"></a></li>
+				</ul>
+			</footer>
+		</div>
 
 	</div>
 </body>
