fix: cleaned a mess rdy to deploy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-	<link rel="icon" href="img/Cat-avatar-rounded-big.ico">
+	<link rel="icon" href="./assets/img/Cat-avatar-rounded-big.ico">
 	<title>Mahiko CV</title>
 </head>
 
@@ -15,11 +15,11 @@
 	<!--navbar-->
 	<nav class="nav">
 		<ul class="nav__list">
-			<li><a href="#">SKILLS</a></li>
-			<li><a href="#">CODE EXAMPLE</a></li>
-			<li><a href="#">EXPERIENCE</a></li>
-			<li><a href="#">EDUCATION</a></li>
-			<li><a href="#">ENGLISH</a></li>
+			<li><a href="#skills">SKILLS</a></li>
+			<li><a href="#code-example">CODE EXAMPLE</a></li>
+			<li><a href="#experience">EXPERIENCE</a></li>
+			<li><a href="#education">EDUCATION</a></li>
+			<li><a href="#english">ENGLISH</a></li>
 		</ul>
 	</nav>
 	<!--end of navbar-->
@@ -28,7 +28,7 @@
 		<header class="header">
 			<div class="header__top">
 				<div class="user__avatar__container">
-					<img class="user__avatar" src="./img/Cat-avatar-rounded-big.png" alt="avatar">
+					<img class="user__avatar" src="./assets/img/Cat-avatar-rounded-big.png" alt="avatar">
 				</div>
 				<div class="author__container">
 					<div class="author__name">
@@ -39,26 +39,24 @@
 					</div>
 					<div class="author__links">
 						<div class="link__github">
-							<a href="https://github.com/Mahiko" target="_blank"><img src="img/github.png" alt="github"></a>
+							<a href="https://github.com/Mahiko" target="_blank"><img src="./assets/img/github.png" alt="github"></a>
 						</div>
 						<div class="link__discord">
-							<a href="https://discordapp.com/users/mahiko_/" target="_blank"><img src="img/discord.png" alt="discord"></a>
+							<a href="https://discordapp.com/users/mahiko_/" target="_blank"><img src="./assets/img/discord.png" alt="discord"></a>
 						</div>
 						<div class="link__linkedin">
-							<a href="#" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
+							<a href="#" target="_blank"><img src="./assets/img/linkedin.png" alt="linkedin"></a>
 						</div>
 					</div>
-
 				</div>
-
 			</div>
 			<div class="header__bottom">
 				<ul class="user__info__container">
-					<li class="user__info"><img src="img/icons_calendar.png" alt="birth datye">April 1, 1990</li>
-					<li class="user__info"><img src="img/icons_location.png" alt="icons_location">Murmansk, Russia</li>
-					<li class="user__info"><img src="img/icons_mail.png" alt="email adress">example@mail.ru</li>
-					<li class="user__info"><img src="img/icons_phone.png" alt="phone number">+1 (007) 123-4567</li>
-					<li class="user__info"><img src="img/skype.png" alt="skype">Mahiko_example</li>
+					<li class="user__info"><img src="./assets/img/icons_calendar.png" alt="birth datye">April 1, 1990</li>
+					<li class="user__info"><img src="./assets/img/icons_location.png" alt="icons_location">Murmansk, Russia</li>
+					<li class="user__info"><img src="./assets/img/icons_mail.png" alt="email adress">example@mail.ru</li>
+					<li class="user__info"><img src="./assets/img/icons_phone.png" alt="phone number">+1 (007) 123-4567</li>
+					<li class="user__info"><img src="./assets/img/skype.png" alt="skype">Mahiko_example</li>
 				</ul>
 			</div>
 		</header>
@@ -74,41 +72,40 @@
 						I want to learn front-end web development to develop some pet projects inmy free time, participate in open source development and maybe somefreelancing. For better or worse, I have no plans to change my profession yet.</p>
 				</div>
 				<div class="skills">
-					<h3>Skills</h3>
+					<h3 id="skills">Skills</h3>
 					<ul class="skills__container">
 						<li class="skills__container_box">
-							<img src="img/icons_html.png" alt="html icon">
+							<img src="./assets/img/icons_html.png" alt="html icon">
 							<div class="skills__container-text">
 								<h4>HTML</h4>
-								<p>Im an active learner of html!</p>
+								<p>Im an active learner of HTML!</p>
 							</div>
 						</li>
 						<li class="skills__container_box">
-							<img src="img/icons_css.png" alt="css icon">
+							<img src="./assets/img/icons_css.png" alt="css icon">
 							<div class="skills__container-text">
 								<h4>CSS</h4>
-								<p>Im an active learner of html!</p>
+								<p>Im an active learner of CSS!</p>
 							</div>
 						</li>
 						<li class="skills__container_box">
-							<img src="img/icons_js.png" alt="js icon">
+							<img src="./assets/img/icons_js.png" alt="js icon">
 							<div class="skills__container-text">
 								<h4>JavaScript</h4>
-								<p>Im an active learner of html!</p>
+								<p>Im an active learner of JavaScript!</p>
 							</div>
 						</li>
 						<li class="skills__container_box">
-							<img src="img/icons_react.png" alt="html icon">
+							<img src="./assets/img/icons_react.png" alt="html icon">
 							<div class="skills__container-text">
 								<h4>React</h4>
-								<p>Im an active learner of html!</p>
+								<p>Im an active learner of React!</p>
 							</div>
 						</li>
 					</ul>
-
 				</div>
 				<div class="code-example">
-					<h3>Code example</h3>
+					<h3 id="code-example">Code example</h3>
 					<div class="code__container">
 						<pre>
 						<code>
@@ -138,14 +135,14 @@ var square = new Square(2);
 					</div>
 				</div>
 				<div class="experience">
-					<h3>Experience</h3>
+					<h3 id="experience">Experience</h3>
 					<div class="experience__container">
 						<p>Here's my very first CV project!</p>
-						<a href="https://mahiko.github.io/rsschool-cv/cv" target="_blank"><img src="img/my_project.png" alt="my project"></a>
+						<a href="https://mahiko.github.io/rsschool-cv/cv" target="_blank"><img src="./assets/img/my_project.png" alt="my project"></a>
 					</div>
 				</div>
 				<div class="education">
-					<h3>Education</h3>
+					<h3 id="education">Education</h3>
 					<div class="education__container">
 						<div class="education__school">
 							<h5>May - September 2024</h5>
@@ -178,26 +175,25 @@ var square = new Square(2);
 					</div>
 				</div>
 				<div class="english">
-					<h3>English</h3>
+					<h3 id="english">English</h3>
 					<div class="english__container">
 						<p>B2 Upper-intermediate</p>
-						<img src="img/Englsih_level.png" alt="english level">
-						<a href="https://www.efset.org/quick-check/">www.efset.org</a>
+						<img src="./assets/img/Englsih_level.png" alt="english level">
+						<a href="https://www.efset.org/quick-check/" target="_blank">www.efset.org</a>
 					</div>
 				</div>
 			</main>
 			<!--footer-->
 			<footer class="footer">
 				<ul class="footer_container">
-					<li class="github"><a href="https://github.com/Mahiko" target="_blank"><img src="img/github.png" alt="author github"></a></li>
+					<li class="github"><a href="https://github.com/Mahiko" target="_blank"><img src="./assets/img/github.png" alt="author github"></a></li>
 					<li>
 						<h5><span>&copy;</span>2023 Mahiko LLC.</h5>
 					</li>
-					<li class="rsschool"><a href="https://rs.school/js/" target="_blank"><img src="img/rs_school_js.svg" alt="rs school"></a></li>
+					<li class="rsschool"><a href="https://rs.school/js/" target="_blank"><img src="./assets/svg/rs_school_js.svg" alt="rs school"></a></li>
 				</ul>
 			</footer>
 		</div>
-
 	</div>
 </body>
 
